-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 11, 17, 21, 22
-
Component/s: hotspot
-
b07
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8316612 | 21.0.2 | Aleksey Shipilev | P4 | Resolved | Fixed | b02 |
| JDK-8318523 | 17.0.10-oracle | Tobias Hartmann | P4 | Resolved | Fixed | b04 |
| JDK-8316611 | 17.0.10 | Aleksey Shipilev | P4 | Resolved | Fixed | b01 |
| JDK-8318521 | 11.0.22-oracle | Tobias Hartmann | P4 | Resolved | Fixed | b04 |
| JDK-8316221 | 11.0.22 | Martin Doerr | P4 | Resolved | Fixed | b01 |
| JDK-8318199 | openjdk8u402 | Paul Hohensee | P4 | Resolved | Fixed | b01 |
| JDK-8360249 | shenandoah8u402 | Paul Hohensee | P4 | Resolved | Fixed | master |
There is an assert in `PhiResolver::move`, which implies the default value should be `nullptr`:
```
void PhiResolver::move(ResolveNode* src, ResolveNode* dest) {
...
// cylce in graph detected
assert(_loop == nullptr, "only one loop valid!");
_loop = dest;
...
}
```
- backported by
-
JDK-8316221 C1: Uninitialized PhiResolver::_loop field
-
- Resolved
-
-
JDK-8316611 C1: Uninitialized PhiResolver::_loop field
-
- Resolved
-
-
JDK-8316612 C1: Uninitialized PhiResolver::_loop field
-
- Resolved
-
-
JDK-8318199 C1: Uninitialized PhiResolver::_loop field
-
- Resolved
-
-
JDK-8318521 C1: Uninitialized PhiResolver::_loop field
-
- Resolved
-
-
JDK-8318523 C1: Uninitialized PhiResolver::_loop field
-
- Resolved
-
-
JDK-8360249 C1: Uninitialized PhiResolver::_loop field
-
- Resolved
-
- links to
-
Commit
openjdk/jdk8u-dev/0bc5d68d
-
Commit
openjdk/jdk11u-dev/470789a6
-
Commit
openjdk/jdk17u-dev/ac2d89ba
-
Commit
openjdk/jdk21u/2f3e1511
-
Commit
openjdk/jdk/489a32fe
-
Review
openjdk/jdk8u-dev/369
-
Review
openjdk/jdk11u-dev/2123
-
Review
openjdk/jdk17u-dev/1721
-
Review
openjdk/jdk21u/141
-
Review
openjdk/jdk/14819