8311813: C1: Uninitialized PhiResolver::_loop field

Backport-of: 489a32fe40e2a2c539296d51d4ffc0abc036d33c